[gd_scene load_steps=5 format=3 uid="uid://dphuneonyspf2"]

[ext_resource type="Script" path="res://scenes/device/social_media_post.gd" id="1_v3lyl"]
[ext_resource type="Theme" uid="uid://dinj8j20l57j3" path="res://scenes/components/phone_button.tres" id="2_uvcw3"]
[ext_resource type="Texture2D" uid="uid://ba6k4rffpt7hm" path="res://assets/images/social_media/social_media_post_icon.png" id="3_6ovd0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r81tw"]
bg_color = Color(0.211765, 0.807843, 0.337255, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[node name="SocialMediaPost" type="PanelContainer"]
custom_minimum_size = Vector2(60, 30)
offset_right = 60.0
offset_bottom = 30.0
size_flags_horizontal = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_r81tw")
script = ExtResource("1_v3lyl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(54, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_uvcw3")

[node name="PsedoMargin2" type="ReferenceRect" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="Profile" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_uvcw3")
theme_override_colors/font_color = Color(0, 0, 0, 1)
icon = ExtResource("3_6ovd0")
alignment = 0
text_overrun_behavior = 3
clip_text = true

[node name="Location" type="RichTextLabel" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(54, 0)
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0.266667, 0.266667, 0.266667, 1)
fit_content = true

[node name="PostContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="PostImage" type="TextureRect" parent="VBoxContainer/PostContainer"]
visible = false
layout_mode = 2

[node name="PostText" type="RichTextLabel" parent="VBoxContainer/PostContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_uvcw3")
fit_content = true

[node name="PsedoMargin" type="ReferenceRect" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
